[package]
name = "dedup"
version = "0.1.0"
edition = "2021"
authors = ["Ratul Rahman <hello@ratul-rahman.com>"]
description = "A simple and fast file deduplicator"
license = "MIT"
repository = "https://github.com/heyrtl/dedup"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
sha2 = "0.10"
indicatif = "0.17"
colored = "2.1"
humansize = "2.1"